--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
   <button id="yesButton" class="button">Evet</button>
   <button id="noButton" class="button">Hayır</button>
   <audio id="song" loop>
-    <source src="sarki.mp3" type="audio/mpeg">
+    <audio id="music" src="sarki.mp3" autoplay loop></audio>
     Tarayıcınız audio etiketini desteklemiyor.
   </audio>
 </div>
@@ -170,3 +170,4 @@
 </script>
 </body>
 </html>
+
