--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
   <button id="yesButton" class="button">Evet</button>
   <button id="noButton" class="button">Hayır</button>
   <audio id="song" loop>
-    <audio id="music" src="sarki.mp3" autoplay loop></audio>
+    <source src="sarki.mp3" type="audio/mpeg">
     Tarayıcınız audio etiketini desteklemiyor.
   </audio>
 </div>
@@ -107,9 +107,9 @@
   // Sayfalar dizisi
   const pages = [
     { question: "Özledin mi?", animation: ['❤️'], background: 'ask.jpg', no: true },
-    { question: "Sinirim geçti", animation: ['🌸'], background: '2. sayfa.jpg', no: true },
-    { question: "Barış ve kavuşma ", animation: ['❤️','🌸','🧿'], background: 'orta.png', no: true },
-    { question: "553 838 9999\nMesajın bekleniyor SON", animation: ['❤️','🌸','🧿','📱'], background: 'final.png', no: false }
+    { question: "Sinirin geçti", animation: ['🌸'], background: '2. sayfa.jpg', no: true },
+    { question: "Barışma küslük bitirme butonu", animation: ['❤️','🌸','🧿'], background: 'orta.png', no: true },
+    { question: "553 838 9999\nMesajın bekleniyor", animation: ['❤️','🌸','🧿','📱'], background: 'final.png', no: false }
   ];
 
   let currentPage = 0;
@@ -170,4 +170,3 @@
 </script>
 </body>
 </html>
-
