--- a/index.html
+++ b/index.html
@@ -109,11 +109,11 @@ const message = document.getElementById('message');
 const song = document.getElementById('song');
 
 const pages = [
-  { question: "Özledin mi?", animation: ['❤️'], background: 'ask.jpg', no: true },
-  { question: "Sinirin geçti", animation: ['🌸'], background: '2. sayfa.jpg', no: true },
-  { question: "Barışma küslük bitirme butonu", animation: ['❤️','🌸','🧿'], background: 'orta.png', no: true },
+  { question: "Konuşamadık ama kötü niyetle bir şey yapmak istemedim buna inanıyor musun?", animation: ['❤️'], background: 'ask.jpg', no: true },
+  { question: "Sinirin geçtiyse özrümü kabul ediyor musun seni bekliyorum", animation: ['🌸'], background: '2. sayfa.jpg', no: true },
+  { question: "seni özledim fındık", animation: ['❤️','🌸','🧿'], background: 'orta.png', no: true },
   { question: "553 838 9999\nMesajın bekleniyor", animation: ['❤️','🌸','🧿','📱'], background: 'final.png', no: false },
-  { question: "Ben bencil biri değilim", animation: [], background: 'arka_yaz.png', no: false, input: true } // 5. sayfa
+  { question: "Buraya kadar geldiysen oyunu bitirdin ve karşılığında güzel bir mesaj atarak bunu bitirmelisin artık konuşabilmeliyiz", animation: [], background: 'arka_yaz.png', no: false, input: true } // 5. sayfa
 ];
 
 let currentPage = 0;
@@ -214,3 +214,4 @@ loadPage(currentPage);
 </script>
 </body>
 </html>
+
