--- a/index.html
+++ b/index.html
@@ -109,11 +109,11 @@ const message = document.getElementById('message');
 const song = document.getElementById('song');
 
 const pages = [
-  { question: "Konuşamadık ama kötü niyetle bir şey yapmak istemedim buna inanıyor musun?", animation: ['❤️'], background: 'ask.jpg', no: true },
-  { question: "Sinirin geçtiyse özrümü kabul ediyor musun seni bekliyorum", animation: ['🌸'], background: '2. sayfa.jpg', no: true },
-  { question: "seni özledim fındık", animation: ['❤️','🌸','🧿'], background: 'orta.png', no: true },
-  { question: "553 838 9999\nMesajın bekleniyor", animation: ['❤️','🌸','🧿','📱'], background: 'final.png', no: false },
-  { question: "Buraya kadar geldiysen oyunu bitirdin ve karşılığında güzel bir mesaj atarak bunu bitirmelisin artık konuşabilmeliyiz", animation: [], background: 'arka_yaz.png', no: false, input: true }
+  { question: "Eğer bir gün tekrar gelirsen seni çok sevdiğimi bilmeni isterim?", animation: ['❤️'], background: 'ask.jpg', no: true },
+  { question: "Sensiz senin istediğin gibi biri olmak istemiyorum senin için her şeyi yapmaya çalışıyorum", animation: ['🌸'], background: '2. sayfa.jpg', no: true },
+  { question: "Barışalı 1 ay bile olmadı bu kadar kısa sürede olmuyor etmiyor demen beni çok üzdü. Bunu dedirtmemek için çabaladım bu süreçte yoksa arza yapardım sana", animation: ['❤️','🌸','🧿'], background: 'orta.png', no: true },
+  { question: "Keşke seninle konuşsaydım bazı şeyleri sana kötü davranıyorum sanmazdın seni de anlıyorum ama yemin ederim niyetim iyiydi çok pişmanım bu yüzden ama dönülmeyecek yerded değiliz hala", animation: ['❤️','🌸','🧿','📱'], background: 'final.png', no: false },
+  { question: "Nerelerden ne ilişkiler dönüyor bizim çabamız bu zamana kadar verdiklerimiz bunu hak ediyor zaten seni çok özledim yağmur ne diyim bilmiyorum", animation: [], background: 'arka_yaz.png', no: false, input: true }
 ];
 
 let currentPage = 0;
@@ -211,3 +211,4 @@ window.addEventListener('load', ()=>{
 </script>
 </body>
 </html>
+
