--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ const message = document.getElementById('message');
 const song = document.getElementById('song');
 
 const pages = [
-  { question: "Eğer bir gün tekrar gelirsen seni çok sevdiğimi bilmeni isterim?", animation: ['❤️'], background: 'ask.jpg', no: true },
+  { question: "özür dilerim", animation: ['❤️'], background: 'ask.jpg', no: true },
   { question: "Sensiz senin istediğin gibi biri olmak istemiyorum senin için her şeyi yapmaya çalışıyorum", animation: ['🌸'], background: '2. sayfa.jpg', no: true },
   { question: "Barışalı 1 ay bile olmadı bu kadar kısa sürede olmuyor etmiyor demen beni çok üzdü. Bunu dedirtmemek için çabaladım bu süreçte yoksa arza yapardım sana", animation: ['❤️','🌸','🧿'], background: 'orta.png', no: true },
   { question: "Keşke seninle konuşsaydım bazı şeyleri sana kötü davranıyorum sanmazdın seni de anlıyorum ama yemin ederim niyetim iyiydi çok pişmanım bu yüzden ama dönülmeyecek yerded değiliz hala", animation: ['❤️','🌸','🧿','📱'], background: 'final.png', no: false },
@@ -211,4 +211,5 @@ window.addEventListener('load', ()=>{
 </script>
 </body>
 </html>
+
 
