--- a/index.html
+++ b/index.html
@@ -109,11 +109,11 @@ const message = document.getElementById('message');
 const song = document.getElementById('song');
 
 const pages = [
-  { question: "özür dilerim", animation: ['❤️'], background: 'ask.jpg', no: true },
-  { question: "Sensiz senin istediğin gibi biri olmak istemiyorum senin için her şeyi yapmaya çalışıyorum", animation: ['🌸'], background: '2. sayfa.jpg', no: true },
-  { question: "Barışalı 1 ay bile olmadı bu kadar kısa sürede olmuyor etmiyor demen beni çok üzdü. Bunu dedirtmemek için çabaladım bu süreçte yoksa arza yapardım sana", animation: ['❤️','🌸','🧿'], background: 'orta.png', no: true },
-  { question: "Keşke seninle konuşsaydım bazı şeyleri sana kötü davranıyorum sanmazdın seni de anlıyorum ama yemin ederim niyetim iyiydi çok pişmanım bu yüzden ama dönülmeyecek yerded değiliz hala", animation: ['❤️','🌸','🧿','📱'], background: 'final.png', no: false },
-  { question: "Nerelerden ne ilişkiler dönüyor bizim çabamız bu zamana kadar verdiklerimiz bunu hak ediyor zaten seni çok özledim yağmur ne diyim bilmiyorum", animation: [], background: 'arka_yaz.png', no: false, input: true }
+  { question: "vefasızsın", animation: ['❤️'], background: 'ask.jpg', no: true },
+  { question: "yazık", animation: ['🌸'], background: '2. sayfa.jpg', no: true },
+  { question: """"", animation: ['❤️','🌸','🧿'], background: 'orta.png', no: true },
+  { question: """"", animation: ['❤️','🌸','🧿','📱'], background: 'final.png', no: false },
+  { question: """", animation: [], background: 'arka_yaz.png', no: false, input: true }
 ];
 
 let currentPage = 0;
@@ -211,5 +211,6 @@ window.addEventListener('load', ()=>{
 </script>
 </body>
 </html>
+
 
 
