--- a/index.html
+++ b/index.html
@@ -111,9 +111,9 @@ const song = document.getElementById('song');
 const pages = [
   { question: "vefasızsın", animation: ['❤️'], background: 'ask.jpg', no: true },
   { question: "yazık", animation: ['🌸'], background: '2. sayfa.jpg', no: true },
-  { question: """"", animation: ['❤️','🌸','🧿'], background: 'orta.png', no: true },
-  { question: """"", animation: ['❤️','🌸','🧿','📱'], background: 'final.png', no: false },
-  { question: """", animation: [], background: 'arka_yaz.png', no: false, input: true }
+  { question: "...", animation: ['❤️','🌸','🧿'], background: 'orta.png', no: true },
+  { question: "...", animation: ['❤️','🌸','🧿','📱'], background: 'final.png', no: false },
+  { question: "...", animation: [], background: 'arka_yaz.png', no: false, input: true }
 ];
 
 let currentPage = 0;
@@ -211,6 +211,7 @@ window.addEventListener('load', ()=>{
 </script>
 </body>
 </html>
+
 
 
 
